fixed slider on mobile

--- a/client/src/style/_media-phone.scss
+++ b/client/src/style/_media-phone.scss
@@ -137,7 +137,7 @@
 
   // recommendations
   .recommend {
-    margin-top: 0px;
+    margin-top: 0;
     img {
       width: 50%;
     }
@@ -177,4 +177,41 @@
       }
     }
   }
+  // recommendations
+  .recommend {
+    margin-top: 0;
+    img {
+      width: 80%;
+    }
+    h3 {
+      margin-bottom: 40px;
+      font: {
+        size: 16px;
+      }
+    }
+  }
+  .navigation-container {
+    height: 50vh;
+  }
+  .my-slider {
+    height: 50vh;
+
+    img {
+      height: 50%;
+      object-fit: cover;
+    }
+  }
+  .arrows {
+    font-size: 20px;
+    &:focus {
+      font-size: 26px;
+      outline: none;
+    }
+  }
+  .circle-container {
+    .circle-empty {
+      font-size: 13px;
+    }
+  }
+
 }
